--- a/index.html
+++ b/index.html
@@ -4,41 +4,7 @@
         <title>Why (Not)?</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="src/upgrade.js"></script>
-        <script src="src/creature.js"></script>
-        <script src="src/unit.js"></script>
-        <script src="src/quest.js"></script>
-        <script src="src/player.js"></script>
-        <style>
-            body, html {
-                width:100%;
-                height:100%;
-                overflow:hidden;
-            }
-            .tab {
-                width:31%;
-                float: left;
-                max-height: 100%;
-                overflow-y: hidden;
-                overflow-y: auto;
-                padding: 1%;
-                margin: 1%;
-                box-sizing: border-box;
-                border: 1px solid #000;
-                border-radius: 3px;
-                box-shadow: #000 3px 3px 6px;
-            }
-            .level {
-                background-image: linear-gradient(to right, rgba(0, 127, 127, 0.3), rgba(0, 127, 127, 0.4)),
-                    linear-gradient(to bottom, rgba(0, 127, 127, 0.1), rgba(0, 127, 127, 0.2), rgba(0, 127, 127, 0));
-                background-position: center left;
-                background-repeat: no-repeat;
-            }
-            table, tr, td, th {
-                border: 1px solid #ccc;
-                border-collapse: collapse;
-            }
-        </style>
+        <link href="styles/layout.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="tab">
@@ -60,12 +26,14 @@
                     <th>Gold</th>
                     <td>0</td>
                     <td><button onclick="player.addUnit()">Recruit</button></td>
+                    <!--<td><button onclick="player.addDog()">Buy dog</button></td>-->
                 </tr>
             </table>
             <table id="units">
                 <thead>
                     <tr>
                         <th>Name</th>
+                        <th>Job</th>
                         <th>Level</th>
                         <th>Rarity</th>
                         <th>Attack</th>
@@ -103,6 +71,12 @@
                 </tr>
             </table>
         </div>
+        <script src="src/upgrade.js"></script>
+        <script src="src/creature.js"></script>
+        <script src="src/job.js"></script>
+        <script src="src/unit.js"></script>
+        <script src="src/quest.js"></script>
+        <script src="src/player.js"></script>
         <script>
             var player = new Player([
                 new Upgrade("Bar fights", Unit, "defense", 101, 1),
